--- a/frontend/src/ui/assets/css/styling/buttons.css
+++ b/frontend/src/ui/assets/css/styling/buttons.css
@@ -71,17 +71,17 @@ button:disabled {
 
 .btn-ghost {
     @apply flex items-center justify-center;
-    @apply text-sm font-bold uppercase text-primary-700;
+    @apply text-sm font-black text-primary-700 hover:text-primary-800;
     @apply rounded-lg px-4 py-2 hover:bg-primary-50;
     @apply hover:no-underline;
 }
 
 .bg-primary-50 .btn-ghost {
-    @apply text-primary-900 hover:bg-primary-100;
+    @apply text-primary-700 hover:bg-primary-100;
 }
 
 .bg-primary-200 .btn-ghost {
-    @apply text-primary-900 hover:bg-primary-300;
+    @apply text-primary-800 hover:bg-primary-300 hover:text-primary-900;
 }
 
 .btn-back {
