--- a/frontend/src/ui/assets/css/styling/pagination.css
+++ b/frontend/src/ui/assets/css/styling/pagination.css
@@ -1,16 +1,16 @@
 .pagination {
     @apply flex items-stretch justify-end space-x-2;
-    @apply px-6 py-2 md:pr-12 xl:pr-16;
-    @apply fixed bottom-0 left-0 right-0 z-10 bg-primary-50 xl:absolute xl:pr-12;
+    @apply px-8 py-2 md:px-16 xl:pr-20;
+    @apply sticky bottom-0 left-0 z-10 bg-primary-50 xl:px-20;
 }
 
 .pagination-page {
-    @apply w-8 px-2 py-2 font-semibold opacity-50;
+    @apply w-8 rounded-lg px-2 py-2 font-semibold opacity-25;
+    @apply flex items-center justify-center;
 }
 
 .pagination-page.enabled {
     @apply opacity-100;
-    @apply flex w-10 items-center justify-center rounded-lg py-1;
     @apply hover:bg-primary-100 hover:text-primary-600;
 }
 
