--- a/frontend/src/ui/assets/css/styling/table.css
+++ b/frontend/src/ui/assets/css/styling/table.css
@@ -7,9 +7,19 @@ table.v-table {
 
 @media (min-width: 768px) {
     table.v-table {
-        /*margin-left: -2rem;*/
-        /*margin-right: -2rem;*/
-        /*width: calc(100% + 4rem);*/
+        margin-left: -2rem;
+        margin-right: -2rem;
+        width: calc(100% + 4rem);
+    }
+
+    .v-table th:first-child,
+    .v-table td:first-child {
+        padding-right: 2rem !important;
+    }
+
+    .v-table th:last-child,
+    .v-table td:last-child {
+        padding-left: 2rem !important;
     }
 }
 
