--- a/frontend/src/ui/assets/css/styling/input-generic.css
+++ b/frontend/src/ui/assets/css/styling/input-generic.css
@@ -3,7 +3,7 @@
 /* --------------------------------------------------------------- */
 
 .input-field-wrapper {
-    @apply flex items-center;
+    @apply relative flex items-center;
     @apply h-full overflow-hidden;
     @apply rounded-lg border border-primary-200 bg-primary-100;
 }
@@ -41,7 +41,7 @@
 
 /* focus */
 .input-field-wrapper:not(:has(.readonly)):focus-within {
-    @apply border border-primary-500 bg-primary-100;
+    @apply border border-primary-400 bg-primary-100;
 }
 
 /* hover */
@@ -50,20 +50,7 @@
 }
 
 .input-field-wrapper:not(:has(.readonly)):focus-within:hover {
-    @apply border border-primary-500 bg-primary-100;
-}
-
-/* invalid */
-.input-field-wrapper:has(.invalid) {
-    @apply border-red-200 bg-red-50;
-}
-
-.input-field-wrapper:has(.invalid):not(.disabled):hover {
-    @apply border-red-300 bg-red-100;
-}
-
-.input-field-wrapper:has(.invalid):focus-within {
-    @apply border-red-300 bg-red-100;
+    @apply border border-primary-400 bg-primary-100;
 }
 
 /* label */
