--- a/frontend/src/ui/assets/css/styling/input-search.css
+++ b/frontend/src/ui/assets/css/styling/input-search.css
@@ -1,5 +1,5 @@
 .input-search .input-field-wrapper {
-    @apply rounded-full;
+    @apply rounded-full px-2;
     @apply border border-primary-100;
     @apply focus-within:border-primary-300;
 }
