--- a/frontend/src/ui/assets/css/styling/inputs.css
+++ b/frontend/src/ui/assets/css/styling/inputs.css
@@ -8,3 +8,4 @@
 @import '@/ui/assets/css/styling/input-numeric.css';
 @import '@/ui/assets/css/styling/input-search.css';
 @import '@/ui/assets/css/styling/input-dropdown.css';
+@import '@/ui/assets/css/styling/input-filter-chip.css';
