--- a/frontend/src/ui/assets/css/styling/typography.css
+++ b/frontend/src/ui/assets/css/styling/typography.css
@@ -19,11 +19,11 @@ h1 {
 }
 
 h2 {
-    @apply text-sm font-bold text-primary-900;
+    @apply text-sm font-bold;
 }
 
 h3 {
-    @apply text-base font-semibold text-primary-900;
+    @apply text-base font-semibold;
 }
 
 hr {
