get positions from a users qualifications

--- a/frontend/src/ui/assets/css/styling/dialog.css
+++ b/frontend/src/ui/assets/css/styling/dialog.css
@@ -74,6 +74,7 @@
 }
 
 .dialog-wrapper {
+    @apply xl:ml-20;
     animation: anim-dialog-close var(--open-close-animation-duration) ease;
     opacity: 0;
 }
