--- a/frontend/src/ui/assets/css/styling/input-generic.css
+++ b/frontend/src/ui/assets/css/styling/input-generic.css
@@ -55,8 +55,8 @@
 
 /* label */
 .input-label {
-    @apply mb-1 mt-1 text-sm font-bold;
-    @apply pointer-events-none relative z-10 -mb-5 ml-4 text-xs text-primary-700 text-opacity-50;
+    @apply mb-1 mt-1 text-xs font-bold;
+    @apply pointer-events-none relative z-10 -mb-5 ml-4 text-primary-700 text-opacity-50;
 }
 
 .input-label.required {
