--- a/frontend/src/ui/assets/css/lib/dropdown.css
+++ b/frontend/src/ui/assets/css/lib/dropdown.css
@@ -15,6 +15,7 @@
 
 @keyframes anim-open-dropdown {
     0% {
+        pointer-events: none;
         transform: translate(var(--anim-from-x), var(--anim-from-y));
         opacity: 0;
     }
@@ -22,6 +23,7 @@
         opacity: 1;
     }
     1000% {
+        pointer-events: auto;
         transform: translate(0, 0);
         opacity: 1;
     }
