add permission css classes

--- a/frontend/src/ui/assets/css/main.css
+++ b/frontend/src/ui/assets/css/main.css
@@ -14,6 +14,7 @@
 
 @import 'domain/role.css';
 @import 'domain/event.css';
+@import 'domain/permission.css';
 
 html {
     box-sizing: border-box;
