--- a/frontend/src/ui/assets/css/lib/dropdown.css
+++ b/frontend/src/ui/assets/css/lib/dropdown.css
@@ -30,15 +30,14 @@
 }
 
 .dropdown-wrapper-background {
+    @apply bg-black bg-opacity-50 md:bg-transparent;
     @apply m-0 !important;
     @apply fixed bottom-0 left-0 right-0 top-0;
     @apply z-40;
-    background-color: transparent;
 }
 
 .input-dropdown {
     @apply shadow;
-    @apply border;
     @apply flex-1 overflow-y-auto;
 }
 
