--- a/frontend/src/ui/assets/css/styling/input-date.css
+++ b/frontend/src/ui/assets/css/styling/input-date.css
@@ -13,6 +13,7 @@
 
 .input-datepicker-dropdown .vuejs3-datepicker__calendar {
     @apply rounded-lg border border-primary-200 bg-primary-100;
+    height: 21rem;
 }
 
 .input-datepicker-dropdown {
